insert svg line in background of COACHES

--- a/index.html
+++ b/index.html
@@ -244,28 +244,14 @@
 							</div>
 						</div>
 
-						<div class="coach">
-							<div class="coaches">
-								<div class="btn coach_timing coach_id_1">
-									<span>Михаил Лоботюк</span>
-								</div>
+						<div class="coaches">
+							<div class="btn coach_timing linght_10_00 time_start_10_00">
+								<span>Михаил Лоботюк</span>
 							</div>
-							<div class="coaches"></div>
-							<div class="coaches"></div>
-							<div class="coaches"></div>
-							<div class="coaches"></div>
-							<div class="coaches"></div>
-							<div class="coaches"></div>
-							<div class="coaches"></div>
-							<div class="coaches"></div>
-							<div class="coaches"></div>
-							<div class="coaches"></div>	
-							<div class="coaches"></div>
-							<div class="coaches"></div>
 						</div>
 					</div>
 				</div>
-
+			
 				<div class="timetable_for_card">
 					<div class="card size3 child_card">
 						<div class="card_content">
@@ -358,31 +344,14 @@
 							</div>
 						</div>
 
-						<div class="coach">
-							<div class="coaches">
-								<div class="coaches_timing">
-									<div class="btn coach_timing coach_id_2">
-										<span>Ольга Соколова</span>
-									</div>
-									<div class="btn coach_timing coach_id_3">
-										<span>Андрей Островский</span>
-									</div>
-								</div>
+						<div class="coaches">
+							<div class="btn coach_timing linght_5_00 time_start_10_00">
+								<span>Ольга Соколова</span>
 							</div>
-							<div class="coaches"></div>
-							<div class="coaches"></div>
-							<div class="coaches"></div>
-							<div class="coaches"></div>
-							<div class="coaches"></div>
-							<div class="coaches"></div>
-							<div class="coaches"></div>
-							<div class="coaches"></div>
-							<div class="coaches"></div>
-							<div class="coaches"></div>
-							<div class="coaches"></div>
-							<div class="coaches"></div>
+							<div class="btn coach_timing linght_6_00 time_start_14_00">
+								<span>Андрей Островский</span>
+							</div>
 						</div>
-						
 					</div>
 				</div>
 				
@@ -478,32 +447,19 @@
 							</div>
 						</div>
 
-						<div class="coach">
-							<div class="coaches">
-								<div class="coaches_timing">
-									<div class="btn coach_timing coach_id_4">
-										<span>Татьяна Симанович</span>
-									</div>
-									<div class="btn coach_timing coach_id_5">
-										<span>Валентин Зорин</span>
-									</div>
-									<div class="btn coach_timing coach_id_6">
-										<span>Давид Мшвилдадзе</span>
-									</div>
+
+						<div class="coaches">
+							<div class="coaches_timing">
+								<div class="btn coach_timing linght_5_30 time_start_09_30">
+									<span>Татьяна Симанович</span>
+								</div>
+								<div class="btn coach_timing linght_4_00 time_start_13_00">
+									<span>Валентин Зорин</span>
+								</div>
+								<div class="btn coach_timing linght_5_00 time_start_16_00">
+									<span>Давид Мшвилдадзе</span>
 								</div>
 							</div>
-							<div class="coaches"></div>
-							<div class="coaches"></div>
-							<div class="coaches"></div>
-							<div class="coaches"></div>
-							<div class="coaches"></div>
-							<div class="coaches"></div>
-							<div class="coaches"></div>
-							<div class="coaches"></div>
-							<div class="coaches"></div>
-							<div class="coaches"></div>
-							<div class="coaches"></div>
-							<div class="coaches"></div>
 						</div>
 					</div>
 				</div>
@@ -600,26 +556,12 @@
 							</div>
 						</div>
 
-						<div class="coach">
-							<div class="coaches">
-								<div class="coaches_timing">
-									<div class="btn coach_timing coach_id_7">
-										<span>Альберт Леонов</span>
-									</div>
+						<div class="coaches">
+							<div class="coaches_timing">
+								<div class="btn coach_timing linght_10_00 time_start_10_00">
+									<span>Альберт Леонов</span>
 								</div>
 							</div>
-							<div class="coaches"></div>
-							<div class="coaches"></div>
-							<div class="coaches"></div>
-							<div class="coaches"></div>
-							<div class="coaches"></div>
-							<div class="coaches"></div>
-							<div class="coaches"></div>
-							<div class="coaches"></div>
-							<div class="coaches"></div>
-							<div class="coaches"></div>
-							<div class="coaches"></div>
-							<div class="coaches"></div>
 						</div>
 					</div>
 				</div>
